[package]
name = "balloon_game"
version = "0.1.0"
edition = "2021"

[dependencies]
kira = "0.9.4"
rand = "0.8.5"
roast-2d = "0.0.3"
serde_json = "1.0.125"

# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Keep debug information in the binary.
strip = "none"
