[package]
name = "balloon_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kira = "0.9.4"
log = "0.4.22"
rand = "0.8.5"
roast-2d = "0.0.4"
serde_json = "1.0.125"
 
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
